# oai-enchant

./: Cargo.toml  README.md  build.rs
assets/: oai-enchant.desktop
src/: app.rs  editors.rs  lint.rs  logo.rs  main.rs  model.rs  preferences.rs  sidebar.rs
