[package]
name = "oai-enchant"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.29", features = ["default_fonts"] }
egui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
rfd = "0.14"
indexmap = { version = "2", features = ["serde"] }

[profile.release]
opt-level = 2
lto = true
codegen-units = 1
